code for nm support and refactor openvpn.py

--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -294,7 +294,7 @@
                                           <object class="GtkLabel">
                                             <property name="visible">True</property>
                                             <property name="can-focus">False</property>
-                                            <property name="label" translatable="yes">OpenVPN</property>
+                                            <property name="label" translatable="yes">OpenVPN CLI</property>
                                           </object>
                                           <packing>
                                             <property name="expand">False</property>
@@ -319,6 +319,29 @@
                                 <property name="fill">True</property>
                                 <property name="padding">6</property>
                                 <property name="position">2</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkRevealer" id="on_manager_change_revealer">
+                                <property name="visible">True</property>
+                                <property name="can-focus">False</property>
+                                <property name="margin-start">4</property>
+                                <child>
+                                  <object class="GtkLabel">
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">False</property>
+                                    <property name="halign">start</property>
+                                    <property name="label" translatable="yes">Restart eOVPN to reflect changes.</property>
+                                    <style>
+                                      <class name="dim-label"/>
+                                    </style>
+                                  </object>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">3</property>
                               </packing>
                             </child>
                           </object>
