add error checking in eovpn_nm

--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -396,6 +396,7 @@
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
+                                <property name="padding">4</property>
                                 <property name="position">3</property>
                               </packing>
                             </child>
