--- a/data/ui/settings.glade
+++ b/data/ui/settings.glade
@@ -753,12 +753,12 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkButton" id="crt_file_reset">
+                                      <object class="GtkButton" id="ca_file_reset">
                                         <property name="visible">True</property>
                                         <property name="can-focus">True</property>
                                         <property name="receives-default">True</property>
                                         <property name="halign">center</property>
-                                        <signal name="clicked" handler="on_crt_file_reset_clicked" swapped="no"/>
+                                        <signal name="clicked" handler="on_ca_file_reset_clicked" swapped="no"/>
                                         <child>
                                           <object class="GtkImage">
                                             <property name="visible">True</property>
@@ -776,11 +776,11 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <object class="GtkFileChooserButton" id="crt_chooser">
+                                      <object class="GtkFileChooserButton" id="ca_chooser">
                                         <property name="visible">True</property>
                                         <property name="can-focus">False</property>
                                         <property name="title" translatable="yes"/>
-                                        <signal name="file-set" handler="on_crt_chooser_file_set" swapped="no"/>
+                                        <signal name="file-set" handler="on_ca_chooser_file_set" swapped="no"/>
                                       </object>
                                       <packing>
                                         <property name="expand">True</property>
