enter to connect and disconnect

--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -729,6 +729,7 @@
                         <property name="receives-default">True</property>
                         <property name="halign">center</property>
                         <property name="valign">center</property>
+                        <accelerator key="Return" signal="clicked"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
