--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -375,6 +375,22 @@
           </packing>
         </child>
         <child>
+          <object class="GtkModelButton" id="keyboard_shortcuts_btn">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">Keyboard Shortcuts</property>
+            <property name="centered">True</property>
+            <signal name="clicked" handler="on_keyboard_shortcuts_btn_clicked" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="padding">4</property>
+            <property name="position">4</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkModelButton" id="about_btn">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
@@ -387,7 +403,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="padding">4</property>
-            <property name="position">4</property>
+            <property name="position">5</property>
           </packing>
         </child>
       </object>
