--- a/data/ui/main.glade
+++ b/data/ui/main.glade
@@ -394,6 +394,22 @@
           </packing>
         </child>
         <child>
+          <object class="GtkModelButton" id="report_an_issue_btn">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+            <property name="text" translatable="yes">Report an Issue</property>
+            <property name="centered">True</property>
+            <signal name="clicked" handler="report_an_issue_btn_clicked_cb" swapped="no"/>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="padding">4</property>
+            <property name="position">5</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkModelButton" id="about_btn">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
@@ -406,7 +422,7 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="padding">4</property>
-            <property name="position">5</property>
+            <property name="position">6</property>
           </packing>
         </child>
       </object>
