--- a/data/css/main.css
+++ b/data/css/main.css
@@ -1,8 +1,3 @@
-
-body {
-    color: red;
-}
-
 .badge_proto {
     background-color: green;
     padding-top: 2px;
@@ -42,8 +37,17 @@ body {
 }
 
 
+.progress-yellow trough progress {
+    background-color: yellow;
+}
+
+.progress-green trough progress {
+    background-color: rgb(75, 255, 75);
+}
+
+
+
 .star {
-    
     box-shadow: none;
     border: transparent;
     background: transparent;
