--- a/data/css/main.css
+++ b/data/css/main.css
@@ -1,4 +1,3 @@
-
 .badge_proto {
     background-color: green;
     padding-top: 2px;
@@ -24,23 +23,35 @@
     color: white;
 }
 
-
-.bg_red {
-    background-color: rgb(119, 14, 14);
-}
-
-.bg_blue {
-    background-color: rgb(15, 55, 165);
-}
-
-.bg_green {
-    background-color: #26a269;
-}
-
-.bg_black {
-    background-color: black;
-}
-
 .reset_button {
     background: rgb(121, 21, 21);
+}
+
+.ip_text {
+    font-size: large;
+    font-weight: bold;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.progress-yellow trough progress {
+    background-color: #fdd804;
+    border-bottom-color: #fdd804;
+}
+
+.progress-full-green trough progress {
+    background-color: #3E8914;
+    border-bottom-color: #3E8914;
+}
+
+
+
+.star {
+    box-shadow: none;
+    border: transparent;
+    background: transparent;
+    padding: 0px;
+    -gtk-icon-shadow: none;
 }
